# scholia

./: .gitignore  CLAUDE.md  README.md  README.md.scholia.jsonl  pyproject.toml
docs/plans/: 2026-03-12-v0.1-brainstorm.md  2026-03-12-v0.2-implementation.md  2026-03-13-v0.3-packaging.md  v0.3-packaging.md  yyyy-mm-dd-v0.4-and-beyond.md  yyyy-mm-dd-v0.5-and-beyond.md
docs/specs/: 2026-03-12-scholia-design.md  2026-03-12-scholia-v0.1-design.md  2026-03-12-scholia-v0.2-design.md  2026-03-13-scholia-v0.3-design.md
examples/: demo.md  demo.md.scholia.jsonl  distributed-systems-notes.md  example-notes.md  example-notes.md.scholia.jsonl  example-notes.md.scholia.state.json  information-theory-notes.md  macros.sty  references.bib  test.md  test.md.scholia.jsonl  test.md.scholia.state.json
scholia/: __init__.py  __main__.py  cli.py  comments.py  context.py  files.py  mcp_server.py  pandoc-fragment.html  review.py  server.py  state.py  template.html
scholia/data/: agent-instructions.md  quarto-defaults.yml
scholia/filters/: mermaid.lua  sidenote.lua
scholia/static/: quarto-theme.css  scholia.css  scholia.js
tests/: conftest.py  test_cli.py  test_comments.py  test_core.py  test_ephemeral.py  test_files.py  test_init.py  test_mcp.py  test_mv.py  test_review.py  test_rm.py  test_server.py  test_server_state.py  test_shadow_dom.py  test_source_selector.py  test_state.py  test_view_stdin.py
tests/fixtures/: .gitignore  anchoring-stress.md  anchoring-stress.md.scholia.jsonl  basic-thread.md  basic-thread.md.scholia.jsonl  code-and-math.md  code-and-math.md.scholia.jsonl  demo.md  demo.md.scholia.jsonl  demo.md.scholia.state.json  dense-anchors.md  dense-anchors.md.scholia.jsonl  edge-cases.md  edge-cases.md.scholia.jsonl  error-cell-exec.qmd  error-none.md  error-none.qmd  error-yaml-bad.md  long-thread.md  long-thread.md.scholia.jsonl  orphan-comments.md  orphan-comments.md.scholia.jsonl  quarto-test.qmd  quarto-test.qmd.scholia.jsonl  references.bib  resolved-threads.md  (+2 more)
(+10 files in other folders)
