[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scholia"
version = "0.1.0"
description = "Collaborative document annotation for human-AI dialogue"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=3.0",
    "aiohttp>=3.9",
]

[project.scripts]
scholia = "scholia.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-aiohttp>=1.0"]
