[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scholia"
dynamic = ["version"]
description = "Collaborative marginalia for markdown"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=3.0",
    "aiohttp>=3.9",
]

[project.scripts]
scholia = "scholia.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-aiohttp>=1.0"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["F", "E", "W"]

[tool.black]
target-version = ["py310"]
line-length = 99

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "scholia/_version.py"
